--- a/settings.html
+++ b/settings.html
@@ -138,7 +138,7 @@
 </head>
 <body>
   <div class="header">
-    <h1>🎬 Manage GIF Instances</h1>
+    <h1>Anima E - Manage GIF Instances</h1>
     <div style="display: flex; gap: 10px;">
       <button class="add-btn" id="addBtn">+ Add New Instance</button>
     </div>
