chore: replace e9 dance.gif with default.gif as default character animation

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </style>
 </head>
 <body>
-  <img src="e9 dance.gif" id="character" />
+  <img src="default.gif" id="character" />
   
   <script>
     const { ipcRenderer } = require('electron')
